# quady

./: CMakeLists.txt  LICENSE  Makefile  README.md  array.cc  array.hh  cell.cc  cell.hh  edge.cc  edge.hh  face.cc  face.hh  list.cc  list.hh  obj.cc  obj.hh  test-obj.cc  test.cc  test.cpp  tests.cc  vertex.cc  vertex.hh
